--- a/VRChat/24/1290824.html
+++ b/VRChat/24/1290824.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "ue5jt7qHnhLdVqBi7bahZYnsvkwkZ/g74TtuhaJ0FYs="></script>
+    "O+IaqQbdjVFBRjdKa9pYY32CaHVNoubAARl68inFJoY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"\u003c無料\u003eウサギロッド","description":"バーチャルキャストで使用することを想定したウサギの杖です。\nVCIスクリプトが埋め込み可能なので、バーチャルキャスト上で指示棒としても使用できます。\nFBXファイルもありますので、VRChatでも使用できると思われます(すみません、VRChat用にはデバックしていません)。\n\n基本的にはCC0モデルですが、本体や本体を改変したモノ自体の有償配布はご遠慮ください。\n\n「The Seed Online」ではVCIスクリプトを埋め込んだモデルを公開中です。下記ではダウンロードしてすぐバーチャルキャスト上でお使い頂けます。\nhttps://seed.online/items/221b57f2c8992aa75cf0305967cfdc7ec184e485d3c2f7e10a8016d2d612543e\n\nBOOTH上でのモデルにはVCIスクリプトを埋め込んでいませんが、スクリプトそのものや埋め込み方をReadMeファイルに記載しましたので、よろしければご参照ください。\n\n改変・一部使用など、許可なしで行うことが可能です。","url":"https://booth.pm/ja/items/1290824","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/a4f36e14-3199-42e4-a8c5-a64b31bb4125/i/1290824/d1b0e891-f9a6-4ad3-81b8-9c9bb0a8766d_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ue5jt7qHnhLdVqBi7bahZYnsvkwkZ/g74TtuhaJ0FYs="></script>
+    nonce="O+IaqQbdjVFBRjdKa9pYY32CaHVNoubAARl68inFJoY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -353,9 +353,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
