--- a/VRChat/86/1289286.html
+++ b/VRChat/86/1289286.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "k78qxeIGn2nV3YMEZy+3KqU6WLPZ+buNjE/a2H6NH4c="></script>
+    "QTWNxdml6yPKfYTuch4Db0GFkfEYoZ0ilGO93GiQsZE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[開発終了]VRChatSSmemo","description":"※本アプリは開発を終了しました。今後、機能が追加されることはありません。\n本アプリの改良版であるVRChatSSUsersList( https://nyaho.booth.pm/items/2749817 )への移行をお願いいたします。\nすでに本アプリの有料版を購入いただいた方については、本アプリの購入ボタンから無料で後継アプリをダウンロードいただけます。\n\n--- 以下、過去ログ ---\n■VRChatSSmemo\n\n■概要\nVRChatのスクリーンショットを撮影したとき、同じワールドへ誰が居たか後から簡単に確認できます。\nデスクトップモード(F12キー)、VRモード(VRChat内のCamera)によるスクリーンショットの撮影へ対応しています。\n\n■動作確認環境\n・Windows 10(64bit)\n└VRChat(Steam版)\n....├デスクトップモード\n....└VRモード\n※Oculus Store版VRChatは動作未確認です。\n※Oculus Questは非対応です。\n\nインストール手順、アプリの使い方は以下のURLから確認ください。\nhttps://docs.google.com/document/d/1iTxojWewFoTI7Nc0aU9fNayt7zBghLiP4mUj68b2LDI/edit?usp=sharing\n\n■その他\n作者：NyaHo( https://twitter.com/NyaHo_vrc )\n\nご意見や感想、不具合の報告などのご連絡は上記のTwitterアカウントへお願いします。\n\n■免責事項\n本アプリケーションを使用したことにより発生したいかなるトラブルについて、作者は責任を負わないものとします。\n\n■更新履歴\n2019/3/27 v1 初版リリース\n2019/4/16 v1.1 スクリーンショットの日付フォルダ分け機能を追加\n2019/6/1  v1.2 VRChat APIの仕様変更へ対応。\n2019/6/22 v1.21 名前がハイフンで始まるユーザを検索できない不具合を修正。\n2019/7/29 v1.22 ログインエラー時の処理を改善。VRChatログ、スクリーンショットフォルダ指定機能を追加。\n2019/12/14 v1.23 アプリ起動時、ログインエラーが発生しアプリを使用できない不具合を修正。\n2020/4/8 v1.24 二段階認証へ対応、スクリーンショットの日付分類ボタンを追加。\n2021/2/14 v1.25 VRChatログファイルの文字化けにより本アプリが正常に動作しない不具合へ対応。","url":"https://booth.pm/ja/items/1289286","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/030f9ffc-6c5f-4905-a203-71e35f0d118a/i/1289286/37e33762-3a82-45bb-95b2-45f47f00d481_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="k78qxeIGn2nV3YMEZy+3KqU6WLPZ+buNjE/a2H6NH4c="></script>
+    nonce="QTWNxdml6yPKfYTuch4Db0GFkfEYoZ0ilGO93GiQsZE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -415,9 +415,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
