updated at: 2023-07-31 23:08, Raymarching Flower Shader(Unity/VRChat) - wraikny&#39;s shop - BOOTH

--- a/VRChat/41/1289241.html
+++ b/VRChat/41/1289241.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "a/CzmeD3KptfA0vXho0qbiQsvFurRnQSTwcfdZcH878="></script>
+    "PJpDZYf8GFMjkEmOhQ6Rykvp41fR6hM7gVsxmjk6TF0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Raymarching Flower Shader(Unity/VRChat)","description":"レイマーチングを用いて花をレンダリングするシェーダです。\nパラメータで形状を変えられます。  \nアクセサリやワールドオブジェクトに使うことを想定しています。\n\n全プロパティの説明はREADMEに記載してあります。\n\n本配布物を作者に無断での再配布・公開を禁止します。\n解析・改変はご自由にどうぞ。\nVRChat, Unityで使用可能です。\nただしワールドギミックやVRChat以外の作品で使用する場合は、クレジット表記(ex. Author:wraikny)を行ってください。\n\n本作品を使用した場合、説明を読み規約に同意したものとみなします。\n\nサンプル画像には、アバターとして長兎路こよりさまの「ファジー」をつかわせていただきました。\n-----\n更新履歴\n2019/03/26: v1リリース\n2019/03/26: v1.0.1: EachMoveRangeの修正と回転の追加。\n2019/03/26: v1.0.2: EachSpeedをVectorに変更。\n2019/03/26: v1.0.3: Is Draw Outerオプションとサンプルを追加。\n2019/07/30: v1.0.4: サンプルマテリアル3つ追加。\n2020/11/22: v1.0.5: 軽微な修正\n-----\nIt is a shader that draws flowers with Raymarching.\nYou can change the shape with parameters.\n\nDescriptions of all properties are included in the README.\n\nI prohibit redistribution / publication of this distribution without notice to me. \nFree to analyze / modify. \nYou can use it in VRChat, Unity. \nWhen using it as a world object of VRChat of in other your own Unity works, do credit notation (ex. Author: wraikny).\n\nIf you use this work, you will read the description and assume that you agree to the terms.","url":"https://booth.pm/ja/items/1289241","offers":{"priceCurrency":"JPY","@type":"Offer","price":"800"},"image":"https://booth.pximg.net/c/620x620/17196f09-c9fe-4c94-8cb2-5b76e97ce982/i/1289241/3895b35c-b99b-4ee4-93d5-77f134ba726c_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="a/CzmeD3KptfA0vXho0qbiQsvFurRnQSTwcfdZcH878="></script>
+    nonce="PJpDZYf8GFMjkEmOhQ6Rykvp41fR6hM7gVsxmjk6TF0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -560,9 +560,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
