updated at: 2023-07-31 23:13, VRChat用自動車「Sanobant」※ワールドに置くと運転できるよ！ - k.TAMAYAN with 渚乃奏 - BOOTH

--- a/VRChat/48/1285848.html
+++ b/VRChat/48/1285848.html
@@ -107,7 +107,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "oepRp8Pyn8+KzJiSmcGMGvPFth820dTo0ApZXvMv7Eg="></script>
+    "X5JTVUMRWEnM1nrPp0FybbPX5esV3woL6OwMagNg70A="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat用自動車「Sanobant」※ワールドに置くと運転できるよ！","description":"注意：この商品は「VRCSDK2」向けです。3では動作しませんのでご留意ください。\n\n・自作のVRChatワールドにプレハブを設置するだけで、誰でも乗り込んで運転ができる4人乗り乗用車（オプションでラジオつき）です。\n\n・VR、デスクトップ両方で動きます。\n\n・本データをダウンロードした段階で、利用規約（下記参照）に同意したものとみなしますので、必ず目を通してからご購入＆ご利用ください。\n\n・車のデザインは某東側諸国の国産車をイメージしています。\n\n・エンジン音、ブレーキ音は問題が多発するため外しています。\n\n・unitypackageとReadme(text)が入ったzipです。\n\n・試乗はこちらのワールドで可能です。\n→https://vrchat.com/home/launch?worldId=wrld_5b56858b-4cd9-4776-9eb3-2d5795f94dbb","url":"https://booth.pm/ja/items/1285848","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"1500","highPrice":"3000"},"image":"https://booth.pximg.net/c/620x620/1a4e0889-d4a0-4259-9d32-ed14de1b80f3/i/1285848/536e53bd-612a-43e9-80ae-5b78b09f3da0_base_resized.jpg"}
     </script>
@@ -118,7 +118,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="oepRp8Pyn8+KzJiSmcGMGvPFth820dTo0ApZXvMv7Eg="></script>
+    nonce="X5JTVUMRWEnM1nrPp0FybbPX5esV3woL6OwMagNg70A="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -712,9 +712,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
