updated at: 2023-07-31 23:13, 液タブ＋ペン - らくがきこうぼう - BOOTH

--- a/VRChat/59/1285159.html
+++ b/VRChat/59/1285159.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "AZPl4rX49OHmAkx209Kzjwhtqp+4MXtFTp5vJT5pN7U="></script>
+    "GqCYDdpDEqti6yiCzGhJUes6eXkym3PuuSOX30f1Ymw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"液タブ＋ペン","description":"液タブです。\n画面部分と本体のマテリアルを分けてるので、\n画面部分に16:9の画像を投げ込むといい感じに表示されると思います。\n\nペンもマテリアルを分けて、グリップ部分の質感を変えることができますけど\nちっちゃいのであんまりわからない気がします。\n\n液タブ画面は一応3種類用意しておきました。\npsdファイルも同梱しています。\n用意しておいた3種の画面画像のレイヤーを残してあるので\nベースに使うなりしてください。\n\n・液タブ本体三角面：88\n・ペン三角面：314\n\n[内容物]\n・Ekitabu_v1.1.unitypackage（色々入ってます）\n・Ekitabu_v1.1.blend（液タブ本体）\n・Ekitabu_v1.1.fbx\n・EkitabuPen_v1.1.blend（ペン）\n・EkitabuPen_v1.1.fbx\n・Ekitabu_pic.psd（液タブ画面用テクスチャ編集元PSD）\n・Ekitabu_pic_1.png（液タブ画面用テクスチャ1）\n・Ekitabu_pic_2.png（液タブ画面用テクスチャ2）\n・Ekitabu_pic_3.png（液タブ画面用テクスチャ3）\n・Ekitabu_v0.1_uv.png（液タブ本体テクスチャ）\n・EkitabuPen_v0.1_uv.png（ペンテクスチャ）\n\n[利用規約]\n使用、改変はご自由に行ってください。\n3Dモデル、テクスチャベースの自作発言はご遠慮ください。\nただし、色々と参考にしているものがあるので商用には不向きかと思います。\nもし持ち歩いて手元で絵を描けるシステムができたらください。\n何かあった際の連絡先はTwitter（https://twitter.com/rue_moni）が手っ取り早いかと思います。","url":"https://booth.pm/ja/items/1285159","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/a4b21ab1-3457-44ec-9146-715e9a08e036/i/1285159/5d5f899d-54a6-419e-96c4-3e08af2bf0c1_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="AZPl4rX49OHmAkx209Kzjwhtqp+4MXtFTp5vJT5pN7U="></script>
+    nonce="GqCYDdpDEqti6yiCzGhJUes6eXkym3PuuSOX30f1Ymw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -167,7 +167,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      489
+                                      490
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -183,7 +183,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      489
+                                      490
                                     </div>
                                   </div></a>
                                 </div>
@@ -371,9 +371,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
