updated at: 2023-07-31 23:15, 【無料あり】封印されてる感じの剣【Unity・VRChat用】 - SHOP:TNDS - BOOTH

--- a/VRChat/93/1284493.html
+++ b/VRChat/93/1284493.html
@@ -75,49 +75,27 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-  </head>
-  <body>
-    <div class="mini-player-controller" style="display: none;">
-      <a class="scroller" data-smooth-scroll="true"><img class=
-      "mini-player-controller__image" src=
-      "https://asset.booth.pm/assets/thumbnail_placeholder_c_300-09027647543d43ee525b2a7fe28d5ed5a3b6069d0c596c89b21776543ed1c0fe.png"></a><a class="scroller mini-player-information"
-      data-smooth-scroll="true">
-      <div class="mini-player-information__item-name"></div>
-      <div class="mini-player-information__shop-name"></div>
-      <div class="mini-player-information__navigation">
-        試聴中の商品へスクロール
-      </div></a>
-      <div class="mini-player-controls">
-        <div class="mini-player-mode-ui">
-          <div class="mini-player-mode-ui__knob"></div>
-          <div class="mini-player-mode-ui__short">
-            15秒
-          </div>
-          <div class="mini-player-mode-ui__full">
-            フル
-          </div>
-        </div>
-        <div class="mini-player-play-ui"></div>
-      </div>
-    </div>
     <meta content="initial-scale=1.0" id="viewport" name=
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Whjp9yA4hQi9cyto1WV0dR5rLZtAnhyjM41GCbMrEdg="></script>
+    "d6qGVgQqbKVSaCyk1Yu+a3I2cXv4bcGS6XHCiQ6kWWI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料あり】封印されてる感じの剣【Unity・VRChat用】","description":"朝起きて適当にモデリングしていたらかっこいい剣が出来ただけなので特に設定はありませんが、多分闇の剣です。封印されていました。\n\n※1枚目の画像はblenderでレンダリングしたものでイメージです。\nUnity上でのスクリーンショットは2枚目の画像になります。\n\n\u003c中身\u003e\nsword.fbx(モデル本体)\ntex.png(テクスチャ)\nsword.unitypackage(マテリアルの設定を済ませたもの）\n\n\n不明点がございましたらお気軽にお問い合わせください。\n（ディティールを落としたローポリ版もご用意できます)\n\nポリゴン数△23176\n\n無料配布ですがお気に入りになった方が居ましたら支援版の購入で支援していただけると嬉しいです。\n\n\u003c利用規約\u003e\n・禁止事項\n第三者への再配布\n自作発言\n\n・可能なこと\nモデルの改変\nUnityやVRChat以外での利用\n商用利用\n\n・著作権\n本モデルの著作権は当方が有するものとします。\n\n\n","url":"https://booth.pm/ja/items/1284493","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/986023a5-9d6b-4b00-a3c7-8c6a866c4b8e/i/1284493/87235200-343f-463b-990c-31491601c2f4_base_resized.jpg"}
     </script>
     <link rel="shortcut icon" type="image/x-icon" href=
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
-    "apple-touch-icon-precomposed"><noscript><iframe height="0"
-    src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
+    "apple-touch-icon-precomposed">
+  </head>
+  <body>
+    <noscript><iframe height="0" src=
+    "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Whjp9yA4hQi9cyto1WV0dR5rLZtAnhyjM41GCbMrEdg="></script>
+    nonce="d6qGVgQqbKVSaCyk1Yu+a3I2cXv4bcGS6XHCiQ6kWWI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -471,9 +449,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
