updated at: 2023-07-31 23:15, ランドセル - Atreides System - BOOTH

--- a/VRChat/43/1284243.html
+++ b/VRChat/43/1284243.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "HXdtvyr8w5mnzkfJNvNUcvDQn2scaUdeqrYd5OtOrss="></script>
+    "viWh7XhWzOqpseZxvfolLvseVNJf4xe/CNMOSSmHjFE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ランドセル","description":"VRChatアバターむけのオリジナルアクセサリ「ランドセル」です。\n8000△ポリゴン程度となります。\n\n☆内容物・仕様\nモデルのFBXファイル\nテクスチャのPSDファイルおよびプリセットカラーpngファイル\n上記と自家製のシェーダを含めたユニティパッケージとなります。\n※VRCにてアバターのアクセサリとして使用することを想定しています。\n見えない・見えにくいところはそこまで作りこんでおりません。\n\n・randsel1.3.fbx　randsel1.3.blend\n　「ランドセル」のfbxおよびblenderファイルです。\n　シェイプキーが3つ用意してありUnity上での肩ひもの調整ができます。\n　「胸」無～そこそこまで変更できます。\n　「肩ひも調整肩」肩の上側の調整です。\n　「肩ひも調整脇」ウェスト側の調整です。\n　また肩部分の肩紐にボーンが入っていてshoulder_target.L shoulder_target.Rをそれぞれアバターの肩に入れると\n　AimConstraintにより追従します。\n\n・randsel1.1.fbx　randsel1.1.blend\n　AAShaderを使わない場合のモデルです。\n\n・randsel.psd\n　上記モデル用のテクスチャファイルです。\n　メインカラーのパターンが何色かプリセットで入ってますので好みの色で保存して使用してください。\n　Unity上ではpsdのまま使用できます。\n　2048サイズと大きめのサイズで入ってますので必要に応じて縮小するなどして使用してください。\n・randselM.psd\n　上記のテクスチャファイルと合わせて使うAAShader用のマテリアルテクスチャです。sRGBのチェックを外して使用してください\n\n・randsel_x.png randselM_x.png\n　上記のファイルのプリセットカラーファイルです。\n\n\n・randsel1.\t3.unitypackage\n　上記をVRChatで使用するためにある程度設定を行ったPrefab入りのユニティパッケージです。\n\n\n\n　\n　導入方法は上記のunitypackageを導入すると\n　/randsel下にrandselのPrefabおよび関連ファイルが展開されます。\n\n\n　①こちらのPrefabがルートにありますのでこちらをHierarchyに入れ\n　②メッシュとボーンをこのモデルのルートに入れたうえで大きさの調整を行い（メッシュを調整しようとしても動かないのでボーンを拡大縮小してください）\n　③Boneをchest下に入れてください。\n　④shoulder_target.L　shoulder_target.Rをそれぞれの肩に入れ位置を調整します。\n　あとはVRChatの各種設定を行って完成です。\n　\n★2022年3月20日 update!\n　シェーダをAAShader3.3～週末の過ごし方～に変更し、SPS-Iに対応しました。\n　肩ひもの追従をAim Constraintに変更しました。\n\n★2020年6月20日 update!\n　AAShader3DENSHOWへの対応を行いました。\n\n★2020年1月2日 update!\n　若干のモデルの修正および同梱のシェーダーをアップデートしました。\n\n☆利用規約\nAtreidesSystem製3Dモデル共通規約\n\n〇本モデルを購入した時点で本利用規約に同意したものとします。\n本規約は内容を変更される場合があり、最新のものが適用されます。\n\n〇改変について。\n他の項目に反しない限り自由に行ってください\n部分的なパーツ取り等も構いません。\n\n〇本モデル、改変モデルをVRChat等モデルデータをアップロードし購入者のみがアバターとして利用できるサービスへの利用を許可します。\n\n\n〇本モデル、改変モデルの無断再配布、販売を禁止します。\n希望する場合あらかじめご相談ください\n\n〇本モデル、改変モデルをモデルデータとして取り出せない状態にして映像、ゲーム、アプリに組み込むことを許可します。\n収益化に関しては制限しません。またクレジットを記載する必要もありません。\n\n///2022年12月23日　追記項目\n〇本モデルを購入、あるいはギフトとして受け取った人同士で改変データを供給することを許可します。\nアバターモデルの場合その服のみ商品を含むものとします。\nただし、第三者が取得できてしまい状態にしないでください。また、金銭等トラブルが生じた場合責任持てません。\n\n〇公序良俗に反する行為や誹謗中傷行為目的に用いることを禁止します。\n\n〇本モデル、改造モデルを利用することによって生じたトラブル損失に関して一切責任を負わないものとします。\n\n〇翻訳等で差異が存在した場合日本語が優先されます。\n\n--------------------------------------------------------------------\n改定日　2022年12月23日　Boothのギフト機能に対しての改定\n制定日　2019年3月22日\n\n不明点ありましたら以下に連絡してください。\n\nTwitter: @AlbertAtreides\nDISCORD AlbertAtreides#5117","url":"https://booth.pm/ja/items/1284243","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/091e5aa4-67bb-479c-8d17-dd9330fc9eeb/i/1284243/2b9ad0ca-3ec8-40e5-acbc-37d427433af9_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="HXdtvyr8w5mnzkfJNvNUcvDQn2scaUdeqrYd5OtOrss="></script>
+    nonce="viWh7XhWzOqpseZxvfolLvseVNJf4xe/CNMOSSmHjFE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -448,9 +448,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
