updated at: 2023-07-31 23:16, 3Dモデル　「畳」　 - 樫の村 - BOOTH

--- a/VRChat/26/1283226.html
+++ b/VRChat/26/1283226.html
@@ -104,7 +104,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "q7hRTNJBboN0cWv0TN698+JHzQAYRCtqtbfmBZQHhkQ="></script>
+    "2PBkzpoIHCeGROxJPKc3ayto3eWejSLfTsXZtYWGYaI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル　「畳」　","description":"VRChatでの使用を想定した畳の3Dモデルです。\n商品内容\n　unitypacage\n　　各モデル（FBX,blend）\n    テクスチャ　col3種　+normal等\n　　\n禁止事項\n　再配布\n　製作者つじノシカがダメだと思ったこと\n　　\n","url":"https://booth.pm/ja/items/1283226","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/2692783f-714e-4ffd-b82f-df2b0cffb130/i/1283226/4b01defa-f2eb-4428-bb6c-912ca8148715_base_resized.jpg"}
     </script>
@@ -115,7 +115,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="q7hRTNJBboN0cWv0TN698+JHzQAYRCtqtbfmBZQHhkQ="></script>
+    nonce="2PBkzpoIHCeGROxJPKc3ayto3eWejSLfTsXZtYWGYaI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -451,9 +451,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
