updated at: 2023-07-31 23:17, アサルトライフル「PF-2090」　VRC向け　FBX＆Unity package - YUKINIUMU DESIGN - BOOTH

--- a/VRChat/10/1282310.html
+++ b/VRChat/10/1282310.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "vFTuvZuuCUS5h6uHEuL/nqW4MyjS4NsDwvm5Bfuczwc="></script>
+    "dR6RuZvbQ0P6UwxGpByaKLD7CLn2srKxDpHUqPzj0Kg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"アサルトライフル「PF-2090」　VRC向け　FBX＆Unity package","description":"▼当製品について\n本モデルは「Ykr-Armament.co」が製作する武器、装備品、イメージ品のモデルとなっております。\n民間用モデルですが、軍事用として、改造も可能です。\n\n現実にある3種のアサルトライフルのモデルを参考にし\n人間工学に基づいた設計となっております。\n\n\n\n▼製品内容\nreadme\nFBXファイル\nUnityPackage\nテクスチャファイル(ベースカラー、メタリック、ノーマルマップ等)\n\n※モデルなだけであり、発砲、リロード等のシステムは入っておりません。\n\n▼使用に関して\n１．著作権は製作者「Yuuki-rin」に帰属、改変後もYuuki-rinに帰属\n２．使用禁止事項\n→再配布、改変後の再配布は禁止とします\n→改変後であっても、元のモデルの自作発言は禁止とします。\n　※改変後の部分等は自慢してもらっても大丈夫です。元々ある部分のみが対象です。\n\n３．使用可能事項\n→「テクスチャ改変」「モデル改変」「UVの改変」「動画」「営業利用」等、基本的にはなんでもOKです\n※可能かどうか、ご不明点ございましたら、ご連絡お願いいたします。\n\n４．免責事項\n→本データを利用による損害に対する責任は追わないものとさせていただきます。\n→特定個人や団体への中傷を目的とした利用を禁止します。\n\n５．連絡\nその他不明点等ございましたら、Twitterへご連絡お願いいたします。\n＠Yukki_WarVtuber\n\nURL:https://twitter.com/Yukki_WarVtuber","url":"https://booth.pm/ja/items/1282310","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/8488e81a-360b-4cf8-a9ff-572ec8fd6b04/i/1282310/83b48178-ac7f-4453-9450-291ac526e92b_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="vFTuvZuuCUS5h6uHEuL/nqW4MyjS4NsDwvm5Bfuczwc="></script>
+    nonce="dR6RuZvbQ0P6UwxGpByaKLD7CLn2srKxDpHUqPzj0Kg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -443,9 +443,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
