updated at: 2023-07-31 23:23, かごのつえ - AYWorks - BOOTH

--- a/VRChat/49/1277849.html
+++ b/VRChat/49/1277849.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "D6T7gecPmUBq0X1v4jC/SWagr6AHudJWhgdtPdf1dT8="></script>
+    "2GAtee8tACAyoxo+iFG8QoI5Ur22KQ1ngzvutnXNtrs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"かごのつえ","description":"かごのつえ　V1.0\n△3128\n\n----\n\nVケット2はお楽しみいただけましたか？\n積みアバターに悩んでいませんか？\n\nこの杖を使うとアバターを着替えなくても戦利品を自慢できちゃいます！\n\n----\n\n\nDynamicBoneの設定はしてありますので先にインポートしておいてください\n（DynamicBone本体は含まれておりません）\n\n\n揺れるかごの中身について、\nPrefabに行った設定を以下に書きましたので、\n導入の参考にしてください（このテキストは販売データの中にも入っています）\nまた、Prefabにはおとうふが入っていますので、\nモデルと交換で削除または非表示にしてください\n\n\n1.FBXをHierarchyにドロップする\n\n2.かごに入れたいモデルをHierarchyにドロップし、かごに入る大きさまで縮小して位置を合わせる\n\n3.かごに入れたいモデルをCage_endの子にする\n\n4.CageRod＞Armature＞Sasae＞CageにDynamicBoneをつける\n\n5.CageにつけたDynamicBoneのRootにCageを入れる\n\n6.CageにつけたDynamicBoneのExclusionsのSizeに1を入力し、Element 0にかごに入れたモデルを入れる\n\n7.Unityの再生ボタンを押して、揺れるか確認してください\n\n8.正しく揺れたら完成です！","url":"https://booth.pm/ja/items/1277849","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/60a161b7-c7bb-4fa2-8dc4-8ac298dd3e5f/i/1277849/c15e7209-e6c0-4e22-875a-60a84d046f79_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="D6T7gecPmUBq0X1v4jC/SWagr6AHudJWhgdtPdf1dT8="></script>
+    nonce="2GAtee8tACAyoxo+iFG8QoI5Ur22KQ1ngzvutnXNtrs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -548,9 +548,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
