updated at: 2023-07-31 23:28, ｢ミーシェ｣用衣装モデル　『カジュアルショートパーカースタイル』(v1.1) - Store*Snowlight - BOOTH

--- a/VRChat/01/1274501.html
+++ b/VRChat/01/1274501.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "hTny6u3C/U6Wp9IsQOhuF4HCXENaqueUKHxsgME3ChU="></script>
+    "PzHrQ4/8SZUVM4+auUBNRtJdeg3tWmwoSCpaZSyR6NA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"｢ミーシェ｣用衣装モデル　『カジュアルショートパーカースタイル』(v1.1)","description":"本製品は、『ポンデロニウム研究所 オリジナル3Dモデル「ミーシェ」 』用の衣装モデルです。\n\n本製品に、ミーシェ本体のモデルは含まれません。\n以下よりお求めください。\nポンデロニウム研究所　オリジナル３Dモデル「ミーシェ」\nhttps://booth.pm/ja/items/1256087\n\n(ミーシェ・ver1.01にて制作・スキニングしました。バージョンが異なる場合、動作を保証できません。)\n\n以下の導入補助スクリプトに対応しています。\n(Store*Snowlightの商品ではありません)\nAuto Dresser | sentz-A生命維持機関 https://sentz-a.booth.pm/items/1300847\n\n\n---\n2022/04/30\n以後、本商品更新の予定はございません。","url":"https://booth.pm/ja/items/1274501","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1200"},"image":"https://booth.pximg.net/c/620x620/bb487ead-0245-44f1-9e26-22a99b59aed0/i/1274501/5d83a3cf-0ff8-443c-9ee4-3cf208004724_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hTny6u3C/U6Wp9IsQOhuF4HCXENaqueUKHxsgME3ChU="></script>
+    nonce="PzHrQ4/8SZUVM4+auUBNRtJdeg3tWmwoSCpaZSyR6NA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -506,9 +506,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
