updated at: 2023-07-31 23:28, 3Dモデルデータ「簡単竜人装備セット」 - きゅう番地 - BOOTH

--- a/VRChat/08/1274408.html
+++ b/VRChat/08/1274408.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "n+LjWJVmncW6+qwaPpwOztPv1AZgkTblpJwRd4N+Y7Q="></script>
+    "KydoAsKnGufBYmp6+lmCjVH+s+QKr6Mbc05R8cKgrnQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデルデータ「簡単竜人装備セット」","description":"簡単竜人装備セット\n\nモデル説明\nこのセットには角・翼・尻尾の３つが入っています\n※4/8肌に鱗をつける用のテクスチャを追加しました欲しい方は再ＤＬお願いします変形・複製をつなげるなどしてうまくモデルに合わせて配置してください\nイメージ画像のキャラクターモデルは付属していませんので注意してください\n△面数：翼12,438　角796　尻尾1020　計14,254\nテクスチャ枚数：3枚\nメッシュオブジェクト数：3\n\nデフォルト使用シェーダー：UnityChanToonShaderVer2\n\nイメージ画像に使用させていただいたモデル\n・VRChatアバター用3Dモデル「タチバナ」　https://booth.pm/ja/items/1264356\n・VRChat向け３Dモデル「428ちゃん」　https://booth.pm/ja/items/1151024\n・一頭身あちゃくん　https://booth.pm/ja/items/1264245\n\n内容物\n・tunosippo.fbx\n・tubasa.fbx\n・tubasa.png\n・tubasa outline.png\n・tunosippo.png\n・tubasa.psd\n・tunosippo.psd\n・tunosippo.blend\n・tubasa.blend\n・ryujin.unitypackage\n・skin scale.png\n・skin scale.psd\n\n導入方法\n事前にダイナミックボーンを導入していただくと尻尾や翼が揺れます\n付属のunitypackageをインポートしていただきプレハブを読み込んでいただければ可能です\n詳しくはreadmeに記述します\n\n利用規約\n本モデルを購入した時点で本利用規約に同意したものとします。\n利用規約の内容は変更する場合があり、最新のものが適用されます。\n\n・モデル改造は自由です。\n\n・本モデル、改造モデル著作権はここのかに帰属するものとします。\n\n・本モデル、改造モデルのVRChat等モデルデータをアップロードし、アバターとして使用するサービスへの使用を許可します。\n\n・上記サービスで購入者本人以外が、本セットを含むアバターを使用できるようにする行為は許可しますが、本セット以外の部分のモデルデータについてはそのモデルのの利用規約に準拠します\n\n・本モデル、改造モデルの再配布、販売を禁じます\n\n・本モデル、改造モデルを使用したバーチャルYoutuber等の活動、ゲーム、アニメーション、アプリに使用することを許可します。収益化等制限いたしません。なお本モデル以外の部分のモデルはその著作者の規約に準じます\n\n・本モデル、改造モデルを使用することによって生じた何らかのトラブル、損失に対しここのかは一切責任を負わないものとします。\n\n\n2019年3月15日制定\n\ntwitter\n@VRkokonoka99\n\ngmail\nkyuei03@gmail.com","url":"https://booth.pm/ja/items/1274408","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/16585cc4-975a-47ba-adad-8fe8e44fb32e/i/1274408/480ddc9f-5b4b-4bdd-b22a-f034c97fafd6_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="n+LjWJVmncW6+qwaPpwOztPv1AZgkTblpJwRd4N+Y7Q="></script>
+    nonce="KydoAsKnGufBYmp6+lmCjVH+s+QKr6Mbc05R8cKgrnQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -460,9 +460,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
